impl add_http_service
